--- a/docs/static/templates/MarchingSquaresVsAI/index.html
+++ b/docs/static/templates/MarchingSquaresVsAI/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marching Squares Vs AIs</title>
-    <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
-    
+    <link rel="stylesheet" type="text/css" href="/JavaScriptPrograms/static/styles/style.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js" integrity="sha512-a5hlZKgpC1LVAuKgVeXdP0D9Yfacj0hLtNdzx9zFMkIWRrQyO37KtIPiqArGmVuaBYu3ON6Vt0N3+G/JaLXQYQ==" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
   </head>
-  
+
   <body>
-    <script src="/static/scripts/MarchingSquaresVsAI/sketch.js"></script>
-    <script src="/static/scripts/MarchingSquaresVsAI/NeuralNetwork.js"></script>
-    <script src="/static/scripts/MarchingSquaresVsAI/NeuralNetwork_TF.js"></script>
+    <script src="/JavaScriptPrograms/static/scripts/MarchingSquaresVsAI/sketch.js"></script>
+    <script src="/JavaScriptPrograms/static/scripts/MarchingSquaresVsAI/NeuralNetwork.js"></script>
+    <script src="/JavaScriptPrograms/static/scripts/MarchingSquaresVsAI/NeuralNetwork_TF.js"></script>
   </body>
 </html>
