--- a/docs/static/templates/Demineur/index.html
+++ b/docs/static/templates/Demineur/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
-    <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
-    
+    <link rel="stylesheet" type="text/css" href="/JavaScriptPrograms/static/styles/style.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js" integrity="sha512-a5hlZKgpC1LVAuKgVeXdP0D9Yfacj0hLtNdzx9zFMkIWRrQyO37KtIPiqArGmVuaBYu3ON6Vt0N3+G/JaLXQYQ==" crossorigin="anonymous"></script>
   </head>
-  
+
   <body>
-    <script src="/static/scripts/Demineur/sketch.js"></script>
-    <script src="/static/scripts/Demineur/board.js"></script>
-    <script src="/static/scripts/Demineur/script.js"></script>
+    <script src="/JavaScriptPrograms/static/scripts/Demineur/sketch.js"></script>
+    <script src="/JavaScriptPrograms/static/scripts/Demineur/board.js"></script>
+    <script src="/JavaScriptPrograms/static/scripts/Demineur/script.js"></script>
   </body>
 </html>
